# autofs_vnext

./: Dockerfile  Makefile  README.md  bootstrap.sh  pyproject.toml  requirements-plugins.txt  requirements.txt
autofs_vnext/: cli.py  ui.py
autofs_vnext/core/: aggregation.py  preprocess.py  registry.py  runner.py  schemas.py
autofs_vnext/methods/: common.py  embedded.py  filters.py  redundancy.py  stability.py  wrappers.py
autofs_vnext/utils/: io.py
examples/: config_classification.json  sample_classification.csv
