[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autofs-vnext"
version = "0.1.0"
description = "AutoFS vNext - feature selection platform (reference implementation)"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn"
]

[project.scripts]
autofs-vnext = "autofs_vnext.cli:main"
